- Implementadas las clases Style, FontWeight y FontColor. - Realizados algunos cambios menores en otras clases.

--- a/trunk/doc/latex/dir_ef15eccf5bd9eca446a41a18c57ac0fd.tex
+++ b/trunk/doc/latex/dir_ef15eccf5bd9eca446a41a18c57ac0fd.tex
@@ -13,9 +13,11 @@ file \textbf{Clip.h}
 \item 
 file \textbf{FeatureVector.h}
 \item 
+file \textbf{FontColor.h}
+\item 
 file \textbf{FontProportionality.h}
 \item 
-file \textbf{FontWeight.h}
+file \hyperlink{_font_weight_8h}{FontWeight.h}
 \item 
 file \textbf{Partitioner.h}
 \item 
