--- a/trunk/doc/latex/dir_f108b8e716a38a781a23bf0e62a4b450.tex
+++ b/trunk/doc/latex/dir_f108b8e716a38a781a23bf0e62a4b450.tex
@@ -13,6 +13,8 @@ file \textbf{Clip.cpp}
 \item 
 file \textbf{FeatureVector.cpp}
 \item 
+file \textbf{FontColor.cpp}
+\item 
 file \textbf{main.cpp}
 \item 
 file \textbf{Partitioner.cpp}
