--- a/trunk/doc/latex/files.tex
+++ b/trunk/doc/latex/files.tex
@@ -6,8 +6,10 @@ Here is a list of all documented files with brief descriptions:\begin{CompactLis
 \item\contentsline{section}{\textbf{Clip.h} }{\pageref{_clip_8h}}{}
 \item\contentsline{section}{\textbf{FeatureVector.cpp} }{\pageref{_feature_vector_8cpp}}{}
 \item\contentsline{section}{\textbf{FeatureVector.h} }{\pageref{_feature_vector_8h}}{}
+\item\contentsline{section}{\textbf{FontColor.cpp} }{\pageref{_font_color_8cpp}}{}
+\item\contentsline{section}{\textbf{FontColor.h} }{\pageref{_font_color_8h}}{}
 \item\contentsline{section}{\textbf{FontProportionality.h} }{\pageref{_font_proportionality_8h}}{}
-\item\contentsline{section}{\textbf{FontWeight.h} }{\pageref{_font_weight_8h}}{}
+\item\contentsline{section}{\hyperlink{_font_weight_8h}{FontWeight.h} }{\pageref{_font_weight_8h}}{}
 \item\contentsline{section}{\textbf{main.cpp} }{\pageref{main_8cpp}}{}
 \item\contentsline{section}{\textbf{Partitioner.cpp} }{\pageref{_partitioner_8cpp}}{}
 \item\contentsline{section}{\textbf{Partitioner.h} }{\pageref{_partitioner_8h}}{}
@@ -20,12 +22,12 @@ Here is a list of all documented files with brief descriptions:\begin{CompactLis
 \item\contentsline{section}{\textbf{Recognizer.h} }{\pageref{_recognizer_8h}}{}
 \item\contentsline{section}{\textbf{Shape.cpp} }{\pageref{_shape_8cpp}}{}
 \item\contentsline{section}{\textbf{Shape.h} }{\pageref{_shape_8h}}{}
-\item\contentsline{section}{\textbf{Statistic.cpp} }{\pageref{_statistic_8cpp}}{}
-\item\contentsline{section}{\textbf{Statistic.h} }{\pageref{_statistic_8h}}{}
+\item\contentsline{section}{\textbf{Statistics.cpp} }{\pageref{_statistics_8cpp}}{}
+\item\contentsline{section}{\textbf{Statistics.h} }{\pageref{_statistics_8h}}{}
 \item\contentsline{section}{\textbf{Style.cpp} }{\pageref{_style_8cpp}}{}
 \item\contentsline{section}{\textbf{Style.h} }{\pageref{_style_8h}}{}
 \item\contentsline{section}{\textbf{Text.cpp} }{\pageref{_text_8cpp}}{}
 \item\contentsline{section}{\textbf{Text.h} }{\pageref{_text_8h}}{}
 \item\contentsline{section}{\textbf{WordRate.cpp} }{\pageref{_word_rate_8cpp}}{}
-\item\contentsline{section}{\hyperlink{_word_rate_8h}{WordRate.h} (\hyperlink{_word_rate_8h}{WordRate.h} )}{\pageref{_word_rate_8h}}{}
+\item\contentsline{section}{\textbf{WordRate.h} }{\pageref{_word_rate_8h}}{}
 \end{CompactList}
