--- a/trunk/doc/latex/struct_statistics.tex
+++ b/trunk/doc/latex/struct_statistics.tex
@@ -19,7 +19,7 @@ First, it stores the elapsed time on every stage, accumulated internally in the 
 \item[Date:]2008-09-18 \end{Desc}
 
 
-Definition at line 24 of file Statistics.h.\subsection*{Public Member Functions}
+Definition at line 21 of file Statistics.h.\subsection*{Public Member Functions}
 \begin{CompactItemize}
 \item 
 \hyperlink{struct_statistics_60ddd90a571ed4c3ce8c0f6317a36d63}{Statistics} ()
@@ -125,5 +125,5 @@ Definition at line 32 of file Statistics.cpp.
 
 The documentation for this struct was generated from the following files:\begin{CompactItemize}
 \item 
-Statistics.h\item 
-Statistics.cpp\end{CompactItemize}
+Statistics.h (108)\item 
+Statistics.cpp (108)\end{CompactItemize}
