--- a/trunk/doc/latex/struct_word_rate.tex
+++ b/trunk/doc/latex/struct_word_rate.tex
@@ -17,7 +17,7 @@ This structure keeps the number of appearances of a single word in the recognize
 \item[Date:]2008-09-18 \end{Desc}
 
 
-Definition at line 20 of file WordRate.h.\subsection*{Public Member Functions}
+Definition at line 17 of file WordRate.h.\subsection*{Public Member Functions}
 \begin{CompactItemize}
 \item 
 \hyperlink{struct_word_rate_c22aaa0c04769cce44ba08bf5e6eb655}{WordRate} ()
@@ -27,14 +27,14 @@ Definition at line 20 of file WordRate.h.\subsection*{Public Member Functions}
 \subsection*{Data Fields}
 \begin{CompactItemize}
 \item 
-\hypertarget{struct_word_rate_5a6907590a6e95ff90c60df191622cce}{
-string \hyperlink{struct_word_rate_5a6907590a6e95ff90c60df191622cce}{word\_\-}}
-\label{struct_word_rate_5a6907590a6e95ff90c60df191622cce}
+\hypertarget{struct_word_rate_38d2adc9d4f6463bd66916be8f52d5f4}{
+string \hyperlink{struct_word_rate_38d2adc9d4f6463bd66916be8f52d5f4}{word}}
+\label{struct_word_rate_38d2adc9d4f6463bd66916be8f52d5f4}
 
 \begin{CompactList}\small\item\em The word itself. \item\end{CompactList}\item 
-\hypertarget{struct_word_rate_23b0cc4d386139bb6ec66b2655d35d70}{
-unsigned int \hyperlink{struct_word_rate_23b0cc4d386139bb6ec66b2655d35d70}{rate\_\-}}
-\label{struct_word_rate_23b0cc4d386139bb6ec66b2655d35d70}
+\hypertarget{struct_word_rate_7e72f43d0fd5042d844f2cb234d11568}{
+unsigned int \hyperlink{struct_word_rate_7e72f43d0fd5042d844f2cb234d11568}{rate}}
+\label{struct_word_rate_7e72f43d0fd5042d844f2cb234d11568}
 
 \begin{CompactList}\small\item\em Number of appearances. \item\end{CompactList}\end{CompactItemize}
 
@@ -78,5 +78,5 @@ Definition at line 22 of file WordRate.cpp.
 
 The documentation for this struct was generated from the following files:\begin{CompactItemize}
 \item 
-WordRate.h (107)\item 
-WordRate.cpp\end{CompactItemize}
+WordRate.h (109)\item 
+WordRate.cpp (109)\end{CompactItemize}
