- Terminada la implementación de la clase 'Text'. - Modificada la interfaz del struct 'WordRate'; ahora es un tipo definido 'pair'. - Realizados algunos cambios menores en Style, Statistics, WordRate, FontColor, FontProportionality y FontWeight - Añadidas las cabeceras necesarias que se habían omitido en revisiones anteriores para las clases 'Style', 'Statistics' y 'WordRate' - Actualizada la documentación con Doxygen - Actualizado el Makefile y la función de prueba.

--- a/trunk/doc/latex/_word_rate_8h.tex
+++ b/trunk/doc/latex/_word_rate_8h.tex
@@ -1,21 +1,39 @@
 \hypertarget{_word_rate_8h}{
 \section{WordRate.h File Reference}
-\label{_word_rate_8h}\index{WordRate.h(107)@{WordRate.h(107)}}
+\label{_word_rate_8h}\index{WordRate.h(110)@{WordRate.h(110)}}
 }
 
 
 \subsection{Detailed Description}
-\hyperlink{_word_rate_8h}{WordRate.h}. 
-
-\begin{Desc}
-\item[Date:]2008-09-17 \end{Desc}
 
 
 Definition in file \hyperlink{_word_rate_8h-source}{WordRate.h}.
 
-{\tt \#include $<$iostream$>$}\par
-\subsection*{Data Structures}
+{\tt \#include $<$utility$>$}\par
+{\tt \#include $<$string$>$}\par
+\subsection*{Typedefs}
 \begin{CompactItemize}
 \item 
-struct \hyperlink{struct_word_rate}{WordRate}
+typedef pair$<$ string, unsigned int $>$ \hyperlink{_word_rate_8h_e8f43926daba5798edbb3cb94ad07ff7}{WordRate}
 \begin{CompactList}\small\item\em Appearance rate of a word. \item\end{CompactList}\end{CompactItemize}
+
+
+\subsection{Typedef Documentation}
+\hypertarget{_word_rate_8h_e8f43926daba5798edbb3cb94ad07ff7}{
+\index{WordRate.h@{WordRate.h}!WordRate@{WordRate}}
+\index{WordRate@{WordRate}!WordRate.h@{WordRate.h}}
+\subsubsection[WordRate]{\setlength{\rightskip}{0pt plus 5cm}typedef pair$<$string, unsigned int$>$ {\bf WordRate}}}
+\label{_word_rate_8h_e8f43926daba5798edbb3cb94ad07ff7}
+
+
+Appearance rate of a word. 
+
+This pair keeps the number of appearances of a word in a text
+
+\begin{Desc}
+\item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
+\begin{Desc}
+\item[Date:]2008-09-19 \end{Desc}
+
+
+Definition at line 20 of file WordRate.h.
