--- a/trunk/doc/latex/annotated.tex
+++ b/trunk/doc/latex/annotated.tex
@@ -3,5 +3,5 @@ Here are the data structures with brief descriptions:\begin{CompactList}
 \item\contentsline{section}{\hyperlink{struct_font_color}{FontColor} (Font color of a character )}{\pageref{struct_font_color}}{}
 \item\contentsline{section}{\hyperlink{struct_statistics}{Statistics} (\hyperlink{struct_statistics}{Statistics} about a text and its recognition process )}{\pageref{struct_statistics}}{}
 \item\contentsline{section}{\hyperlink{class_style}{Style} (Font style of a character )}{\pageref{class_style}}{}
-\item\contentsline{section}{\hyperlink{struct_word_rate}{WordRate} (Appearance rate of a word )}{\pageref{struct_word_rate}}{}
+\item\contentsline{section}{\hyperlink{class_text}{Text} (\hyperlink{class_text}{Text} extracted from the clip by the recognizer )}{\pageref{class_text}}{}
 \end{CompactList}
