--- a/trunk/doc/latex/dir_ef15eccf5bd9eca446a41a18c57ac0fd.tex
+++ b/trunk/doc/latex/dir_ef15eccf5bd9eca446a41a18c57ac0fd.tex
@@ -15,7 +15,7 @@ file \textbf{FeatureVector.h}
 \item 
 file \textbf{FontColor.h}
 \item 
-file \textbf{FontProportionality.h}
+file \hyperlink{_font_proportionality_8h}{FontProportionality.h}
 \item 
 file \hyperlink{_font_weight_8h}{FontWeight.h}
 \item 
@@ -35,5 +35,5 @@ file \textbf{Style.h}
 \item 
 file \textbf{Text.h}
 \item 
-file \textbf{WordRate.h}
+file \hyperlink{_word_rate_8h}{WordRate.h}
 \end{CompactItemize}
