--- a/trunk/doc/latex/struct_font_color.tex
+++ b/trunk/doc/latex/struct_font_color.tex
@@ -56,7 +56,7 @@ unsigned int \hyperlink{struct_font_color_82808b069e5c057f443aa2eddb6f5b71}{blue
 
 Constructor. 
 
-Initializes a \hyperlink{struct_font_color}{FontColor} object with all RGB components set to 0.
+Initializes a \hyperlink{struct_font_color}{FontColor} object with all RGB components set to 0
 
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
@@ -73,9 +73,7 @@ Definition at line 10 of file FontColor.cpp.\hypertarget{struct_font_color_7ed65
 
 Constructor. 
 
-Initializes a \hyperlink{struct_font_color}{FontColor} object with the components set to the values passed.
-
-Since the color must be expressed using a RGB scale of 256 possible values, any value over 255 will be truncated
+Initializes a \hyperlink{struct_font_color}{FontColor} object with the components set to the values passed. Since the color must be expressed using a RGB scale of 256 possible values, any value over 255 will be truncated
 
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
@@ -92,7 +90,7 @@ Definition at line 24 of file FontColor.cpp.\hypertarget{struct_font_color_66091
 
 Destructor. 
 
-Destroys a \hyperlink{struct_font_color}{FontColor} object.
+Destroys a \hyperlink{struct_font_color}{FontColor} object
 
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
@@ -104,5 +102,5 @@ Definition at line 37 of file FontColor.cpp.
 
 The documentation for this struct was generated from the following files:\begin{CompactItemize}
 \item 
-FontColor.h\item 
-FontColor.cpp\end{CompactItemize}
+FontColor.h (110)\item 
+FontColor.cpp (110)\end{CompactItemize}
