--- a/trunk/doc/latex/struct_word_rate.tex
+++ b/trunk/doc/latex/struct_word_rate.tex
@@ -22,6 +22,8 @@ Definition at line 17 of file WordRate.h.\subsection*{Public Member Functions}
 \item 
 \hyperlink{struct_word_rate_c22aaa0c04769cce44ba08bf5e6eb655}{WordRate} ()
 \begin{CompactList}\small\item\em Constructor. \item\end{CompactList}\item 
+\hyperlink{struct_word_rate_063a8ee951293c30671f47b1559f6a5b}{WordRate} (string word\_\-, unsigned int rate\_\-)
+\begin{CompactList}\small\item\em Constructor. \item\end{CompactList}\item 
 \hyperlink{struct_word_rate_a86a63516e4c3d4e8aa9060ea5be6b23}{$\sim$WordRate} ()
 \begin{CompactList}\small\item\em Destructor. \item\end{CompactList}\end{CompactItemize}
 \subsection*{Data Fields}
@@ -57,7 +59,24 @@ Initializes a \hyperlink{struct_word_rate}{WordRate} object with an empty string
 \item[Date:]2008-09-18 \end{Desc}
 
 
-Definition at line 10 of file WordRate.cpp.\hypertarget{struct_word_rate_a86a63516e4c3d4e8aa9060ea5be6b23}{
+Definition at line 10 of file WordRate.cpp.\hypertarget{struct_word_rate_063a8ee951293c30671f47b1559f6a5b}{
+\index{WordRate@{WordRate}!WordRate@{WordRate}}
+\index{WordRate@{WordRate}!WordRate@{WordRate}}
+\subsubsection[WordRate]{\setlength{\rightskip}{0pt plus 5cm}WordRate::WordRate (string {\em word\_\-}, \/  unsigned int {\em rate\_\-})}}
+\label{struct_word_rate_063a8ee951293c30671f47b1559f6a5b}
+
+
+Constructor. 
+
+Initializes a \hyperlink{struct_word_rate}{WordRate} object with the string word\_\- and the number of appearances passed in rate\_\-.
+
+\begin{Desc}
+\item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
+\begin{Desc}
+\item[Date:]2008-09-18 \end{Desc}
+
+
+Definition at line 23 of file WordRate.cpp.\hypertarget{struct_word_rate_a86a63516e4c3d4e8aa9060ea5be6b23}{
 \index{WordRate@{WordRate}!$\sim$WordRate@{$\sim$WordRate}}
 \index{$\sim$WordRate@{$\sim$WordRate}!WordRate@{WordRate}}
 \subsubsection[$\sim$WordRate]{\setlength{\rightskip}{0pt plus 5cm}WordRate::$\sim$WordRate ()}}
@@ -74,9 +93,9 @@ Destroys a \hyperlink{struct_word_rate}{WordRate} object.
 \item[Date:]2008-09-17 \end{Desc}
 
 
-Definition at line 22 of file WordRate.cpp.
+Definition at line 35 of file WordRate.cpp.
 
 The documentation for this struct was generated from the following files:\begin{CompactItemize}
 \item 
-WordRate.h (109)\item 
-WordRate.cpp (109)\end{CompactItemize}
+WordRate.h (110)\item 
+WordRate.cpp (110)\end{CompactItemize}
