--- a/trunk/doc/latex/files.tex
+++ b/trunk/doc/latex/files.tex
@@ -8,7 +8,7 @@ Here is a list of all documented files with brief descriptions:\begin{CompactLis
 \item\contentsline{section}{\textbf{FeatureVector.h} }{\pageref{_feature_vector_8h}}{}
 \item\contentsline{section}{\textbf{FontColor.cpp} }{\pageref{_font_color_8cpp}}{}
 \item\contentsline{section}{\textbf{FontColor.h} }{\pageref{_font_color_8h}}{}
-\item\contentsline{section}{\textbf{FontProportionality.h} }{\pageref{_font_proportionality_8h}}{}
+\item\contentsline{section}{\hyperlink{_font_proportionality_8h}{FontProportionality.h} }{\pageref{_font_proportionality_8h}}{}
 \item\contentsline{section}{\hyperlink{_font_weight_8h}{FontWeight.h} }{\pageref{_font_weight_8h}}{}
 \item\contentsline{section}{\textbf{main.cpp} }{\pageref{main_8cpp}}{}
 \item\contentsline{section}{\textbf{Partitioner.cpp} }{\pageref{_partitioner_8cpp}}{}
@@ -28,6 +28,5 @@ Here is a list of all documented files with brief descriptions:\begin{CompactLis
 \item\contentsline{section}{\textbf{Style.h} }{\pageref{_style_8h}}{}
 \item\contentsline{section}{\textbf{Text.cpp} }{\pageref{_text_8cpp}}{}
 \item\contentsline{section}{\textbf{Text.h} }{\pageref{_text_8h}}{}
-\item\contentsline{section}{\textbf{WordRate.cpp} }{\pageref{_word_rate_8cpp}}{}
-\item\contentsline{section}{\textbf{WordRate.h} }{\pageref{_word_rate_8h}}{}
+\item\contentsline{section}{\hyperlink{_word_rate_8h}{WordRate.h} }{\pageref{_word_rate_8h}}{}
 \end{CompactList}
