- Modificado el comportamiento de la función Text::removeCharacter(unsigned int position_). Ahora si se pasa un valor que supera el tamaño total del contenido se elimina el último carácter por defecto. - Actualizada la documentación según el cambio comentado en el punto anterior.

--- a/trunk/doc/latex/class_text.tex
+++ b/trunk/doc/latex/class_text.tex
@@ -245,7 +245,7 @@ Definition at line 70 of file Text.cpp.\hypertarget{class_text_8f38ee63a6b7706d5
 
 Removes a character from the text. 
 
-The character is removed from the position in text passed in position\_\-, unless it is over the text total length.
+The character is removed from the position in text passed in position\_\-, unless it is over the text total length. In such case, the last character is removed
 
 \begin{Desc}
 \item[Author:]Eliezer Talón (\href{mailto:elitalon@gmail.com}{\tt elitalon@gmail.com}) \end{Desc}
@@ -474,5 +474,5 @@ Definition at line 387 of file Text.cpp.
 
 The documentation for this class was generated from the following files:\begin{CompactItemize}
 \item 
-Text.h (110)\item 
-Text.cpp (107)\end{CompactItemize}
+Text.h (111)\item 
+Text.cpp (111)\end{CompactItemize}
